# Qt6-App-Yocto

./: CMakeLists.txt  README.md  main.cpp  main.qml  resources.qrc
inc/: controller.h
src/: controller.cpp  main.cpp
